[tool.poetry]
name = "dave"
version = "0.1.0"
description = "Best Diving App"
authors = ["Nadav Edri <nadav052433@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.35.39"
botocore = "^1.35.39"
awscli = "^1.35.5"

[tool.poetry.scripts]
my-script = "C:\Users\nadav\DaveB\src\managers\s3_photo_manager.py:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
